--- a/r/re/rea/realbeer.com.html
+++ b/r/re/rea/realbeer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realbeer.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624070336id_/http%3A//www.realbeer.com/shared/privacy/index.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realbeer.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223081107id_/http%3A//www.realbeer.com/shared/privacy/index.php) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Realbeer.com: Privacy Statement</title>
@@ -9,7 +9,7 @@
 
 <meta name="Keywords" content="beer,microbrew,brewpub,brewery,craft beer,beer news,brewers,ale,lager,real ale,real beer,pub,brewing news,links,retail,destinations,spotlight,library,fun,search,beer news,beer travel,beer and health,beer and calories,alcohol content,beer drinking games">
 
-<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" src="/shared/javascript/swfobject.js"></script>
+<script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" src="/shared/javascript/swfobject.js"></script>
 
 <script type="text/javascript">
 
@@ -23,9 +23,34 @@
     ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
 </script>
- 
+<script type="text/javascript">
+var googletag = googletag || {};
+googletag.cmd = googletag.cmd || [];
+(function() {
+var gads = document.createElement('script');
+gads.async = true;
+gads.type = 'text/javascript';
+var useSSL = 'https:' == document.location.protocol;
+gads.src = (useSSL ? 'https:' : 'http:') + 
+'//www.googletagservices.com/tag/js/gpt.js';
+var node = document.getElementsByTagName('script')[0];
+node.parentNode.insertBefore(gads, node);
+})();
+</script>
+
+<script type="text/javascript">
+googletag.cmd.push(function() {
+googletag.defineSlot('/34721086/RealBeerROS_120x120', [120, 120], 'div-gpt-ad-1376330198919-0').addService(googletag.pubads());
+googletag.defineSlot('/34721086/RealBeerROS_120x240', [120, 240], 'div-gpt-ad-1376330198919-1').addService(googletag.pubads());
+googletag.defineSlot('/34721086/RealBeerROS_120x60', [120, 60], 'div-gpt-ad-1376330198919-2').addService(googletag.pubads());
+googletag.defineSlot('/34721086/RealBeerROS_120x600', [120, 600], 'div-gpt-ad-1376330198919-3').addService(googletag.pubads());
+googletag.defineSlot('/34721086/RealBeerROS_300x250', [300, 250], 'div-gpt-ad-1376330198919-4').addService(googletag.pubads());
+googletag.defineSlot('/34721086/RealBeerROS_468x60', [468, 60], 'div-gpt-ad-1376330198919-5').addService(googletag.pubads());
+googletag.pubads().enableSingleRequest();
+googletag.enableServices();
+});
+</script> 
  
 <link rel="stylesheet" href="/shared/config/styles.css" type="text/css">
 </head>
@@ -41,30 +66,13 @@
    <td width="510"><img src="/shared/images/cleargif.gif" width="3" height="5" border="0"><br>
 	<!-- change banner tags to reflect section -->
      <center>
-    <center><script language="JavaScript"> 
-<!-- 
-now = new Date(); 
-random = now.getTime(); 
-document.write('<IFRAME SRC="http://oasis.realbeer.com/oasisi-i.php?s=48&w=468&h=60&cb=' + random + '"'); 
-document.write(' NORESIZE SCROLLING=NO HSPACE=0 VSPACE=0');
-document.write(' FRAMEBORDER=0 MARGINHEIGHT=0 MARGINWIDTH=0');
-document.write(' WIDTH=468 HEIGHT=60>'); 
-document.write('<A HREF="http://oasis.realbeer.com/oasisc.php?s=48&w=468&h=60&cb=' + random + '">');
-document.write('<IMG SRC="http://oasis.realbeer.com/oasisi.php?s=48&w=468&h=60&cb=' + random + '"');
-document.write(' WIDTH=468 HEIGHT=60 BORDER=0></A>');
-document.write('</IFRAME>'); 
-// --> 
-</script><iframe src="http://oasis.realbeer.com/oasisi-i.php?s=48&amp;w=468&amp;h=60&amp;cb=1580357670682" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><A HREF="http://oasis.realbeer.com/oasisc.php?s=48&w=468&h=60&cb=1580357670682"><IMG SRC="http://oasis.realbeer.com/oasisi.php?s=48&w=468&h=60&cb=1580357670682" WIDTH=468 HEIGHT=60 BORDER=0></A></iframe>
-<noscript>
-<IFRAME SRC="http://oasis.realbeer.com/oasisi-i.php?s=48&w=468&h=60"
-MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0
-FRAMEBORDER=0 SCROLLING=NO
-WIDTH=468 HEIGHT=60>
-<A HREF="http://oasis.realbeer.com/oasisc.php?s=48&w=468&h=60"><IMG
-SRC="http://oasis.realbeer.com/oasisi.php?s=48&w=468&h=60"
-WIDTH=468 HEIGHT=60 BORDER=0></A>
-</IFRAME>
-</noscript></center> </center>
+    <!-- RealBeerROS_468x60 -->
+<center><div id="div-gpt-ad-1376330198919-5" style="width:468px; height:60px;">
+<script type="text/javascript">
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1376330198919-5'); });
+</script>
+</div>
+</center> </center>
 	<!-- end banner -->
    </td></tr>
 <!-- end logo -->
@@ -97,7 +105,7 @@ WIDTH=468 HEIGHT=60 BORDER=0></A>
 	<td width="130">
 &nbsp;<br>
 <div class="bodycopy">
-<b><font color="ffffff">Jun 24, 2013</font></b></div>
+<b><font color="ffffff">Dec 23, 2013</font></b></div>
 <p>
 <!-- <div class=subhead><font color="ffffff">Beer Battle</font></div>
 <table bgcolor="ffcc00">
@@ -219,31 +227,14 @@ We may disclose personal information if we are required to do so by law or we in
 </tbody></table>&nbsp;<br>
 
 <font>
-<center><center><b><font size="1">ADVERTISEMENT</font></b><br>
-<script language="JavaScript">
-<!-- 
-now = new Date(); 
-random = now.getTime(); 
-document.write('<IFRAME SRC="http://oasis.realbeer.com/oasisi-i.php?s=16&w=120&h=600&cb=' + random + '"'); 
-document.write(' NORESIZE SCROLLING=NO HSPACE=0 VSPACE=0');
-document.write(' FRAMEBORDER=0 MARGINHEIGHT=0 MARGINWIDTH=0');
-document.write(' WIDTH=120 HEIGHT=600>'); 
-document.write('<A HREF="http://oasis.realbeer.com/oasisc.php?s=16&w=120&h=600&cb=' + random + '">');
-document.write('<IMG SRC="http://oasis.realbeer.com/oasisi.php?s=16&w=120&h=600&cb=' + random + '"');
-document.write(' WIDTH=120 HEIGHT=600 BORDER=0></A>');
-document.write('</IFRAME>'); 
-// --> 
-</script><iframe src="http://oasis.realbeer.com/oasisi-i.php?s=16&amp;w=120&amp;h=600&amp;cb=1580357670718" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="120" height="600"><A HREF="http://oasis.realbeer.com/oasisc.php?s=16&w=120&h=600&cb=1580357670718"><IMG SRC="http://oasis.realbeer.com/oasisi.php?s=16&w=120&h=600&cb=1580357670718" WIDTH=120 HEIGHT=600 BORDER=0></A></iframe>
-<noscript>
-<IFRAME SRC="http://oasis.realbeer.com/oasisi-i.php?s=16&w=120&h=600"
-MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0
-FRAMEBORDER=0 SCROLLING=NO
-WIDTH=120 HEIGHT=600>
-<A HREF="http://oasis.realbeer.com/oasisc.php?s=16&w=120&h=600"><IMG
-SRC="http://oasis.realbeer.com/oasisi.php?s=16&w=120&h=600"
-WIDTH=120 HEIGHT=600 BORDER=0></A>
-</IFRAME>
-</noscript></center></center>
+<center><!-- RealBeerROS_120x600 -->
+<center><b><font size="1">ADVERTISEMENT</font></b><br>
+<div id="div-gpt-ad-1376330198919-3" style="width:120px; height:600px;">
+<script type="text/javascript">
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1376330198919-3'); });
+</script>
+</div>
+</center></center>
 
 </font></td></tr>
 </tbody></table>
@@ -265,7 +256,7 @@ WIDTH=120 HEIGHT=600 BORDER=0></A>
 &nbsp;<br>
 <table width="770"><tbody><tr><td>
 <center><div class="nav">
-© 1994-2011 Real Beer Media, Inc.</div></center>
+© 1994-2013 Real Beer Media, Inc.</div></center>
 </td></tr></tbody></table>
 
 </body></html>
