--- a/p/po/por/pornflixer.com.html
+++ b/p/po/por/pornflixer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pornflixer.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624140100id_/http%3A//www.pornflixer.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pornflixer.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223081138id_/http%3A//www.pornflixer.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,12 +10,11 @@
 	<link href="/styles/form.css" rel="stylesheet" type="text/css">
 	<link href="/styles/all.css" rel="stylesheet" type="text/css">
 <meta name="ero_verify" content="ae83bbfa562106a228dbd881f445f02b">
-
             <link href="http://www.pornflixer.com/rss/" rel="alternate" type="application/rss+xml">
         
-    <script type="text/javascript" async="" src="https://pu.trafficshop.com/preload.js?code=9464a7af709125b0&amp;random=35626532"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://www.pornflixer.com/js/KernelTeamVideoSharingSystem_2.4.3.jsx"></script>
+    <script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://www.pornflixer.com/js/KernelTeamVideoSharingSystem_3.3.3.jsx"></script>
     
-    <script type="text/javascript" src="http://www.pornflixer.com/js/KernelTeamImageRotator_2.4.3.jsx"></script>
+    <script type="text/javascript" src="http://www.pornflixer.com/js/KernelTeamImageRotator_3.3.3.jsx"></script>
     <script type="text/javascript">
         KT_rotationEngineStartup(0.2, 0.5);
     </script>
@@ -38,6 +37,8 @@
 	  })();
 
 	</script>
+<script type="text/javascript" src="http://ads.juicyads.com/jsclients/jam_min.js"></script>
+<script type="text/javascript">window.onload=check_mobile(37892,70218)</script>
 	<!--[if lt IE 8]><link rel="stylesheet" type="text/css" href="/css/ie.css"><![endif]-->
 
 
@@ -47,8 +48,7 @@
 <div class="wrapper">
 	<div class="header">
 		<div class="logo"><a href="http://www.pornflixer.com/" alt="HQ Teen Porn Tube PornFlixer" title="HQ Teen Porn Tube PornFlixer">PornFlixer</a></div>
-		<div class="hbanner"><a href="http://adultfriendfinder.com/go/g1394369-pmo" target="_top">
-<img src="http://graphics.pop6.com/banners/ffadult/26208/15037_26208_468x80_r04.gif" width="468" height="80" border="0"></a></div>
+		<div class="hbanner"><a href="http://www.pornflixer.com/?action=redirect_adv&amp;id=2" target="_blank"><img src="/banners/445x80.jpg" border="0"></a></div>
 		<div class="account-box">
 			<div class="soc-links">
 			<a href="https://twitter.com/share" class="twitter-share-button" data-dnt="true" data-count="none" data-via="twitterapi">Tweet</a>
@@ -108,8 +108,8 @@
 
 					</li>
 					<li><a href="http://www.pornflixer.com/community/">Community</a></li>
-					<li><a href="#" rel="”nofollow”">Cam sex</a></li>
-					<li><a href="http://refer.ccbill.com/cgi-bin/clicks.cgi?CA=945301-0000&amp;PA=2400749" target="_blank" rel="”nofollow”">Dating</a></li>
+					<li><a href="http://www.naked.com/enter.php?prg=2&amp;t=best&amp;id=pflixer" rel="”nofollow”">Cam sex</a></li>
+					<li><a href="http://www.fling.com/enter.php?prg=2&amp;t=zbigvid4&amp;id=pflixer" target="_blank" rel="”nofollow”">Dating</a></li>
 					<li><a href="http://www.pornflixer.com/channels/3d/">3d porn</a></li>
 					<li class="upload"><a href="http://www.pornflixer.com/login.php?action=not_allowed">upload</a></li>
 				</ul>
@@ -217,20 +217,6 @@ In the case when PornFlixer is being owned by or combined with any entity from t
 <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4fc54bb32a6290af"></script>
 <!-- AddThis Button END -->
 </div>
-<!-- BEGIN EroAdvertising ADSPACE CODE -->
-<script type="text/javascript" language="javascript" charset="utf-8" src="http://adspaces.ero-advertising.com/adspace/209343.js"></script>
-<!-- END EroAdvertising ADSPACE CODE -->
-<!-- TRAFFICSHOP POPUNDER -->
-<script type="text/javascript">
-	(function() {
-		var scr = document.createElement('script');
-		scr.type = 'text/javascript';
-		scr.async = true;
-		scr.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'pu.trafficshop.com/preload.js?code=9464a7af709125b0&random=' + Math.floor(84275136*Math.random()+10000000);
-		var s = document.getElementsByTagName('script')[0];
-		s.parentNode.insertBefore(scr, s);
-	})();
-</script>
-<!-- // TRAFFICSHOP POPUNDER -->
+<script src="http://pu.plugrush.com/48zi.js" type="text/javascript"></script>
 
 </body></html>
