--- a/t/tr/tra/tradervue.com.html
+++ b/t/tr/tra/tradervue.com.html
@@ -1,24 +1,26 @@
-<!--The following is the downloaded HTML source of the tradervue.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624141412id_/http%3A//www.tradervue.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tradervue.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223081447id_/http%3A//www.tradervue.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en"><head><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
   <title>
     Tradervue | Privacy Policy
   </title>
   
-  <link href="/assets/application-cdda4cda6eababde99e17c8e7a3f5a09.css" media="screen" rel="stylesheet" type="text/css">
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/assets/application-dc691c9ab94cfa70b853507494844d83.js" type="text/javascript"></script>
+  <link href="/assets/application-dd408537853a0af2490705ab2f55a3f3.css" media="screen" rel="stylesheet">
+  <script src="/assets/application-14da917d6f80419b22a9f752da036f4e.js"></script>
   <meta content="authenticity_token" name="csrf-param">
-<meta content="ZEPMoptW0/EKIGQh07kyHas0bSS8RFhXdYyTZkHnzQU=" name="csrf-token">
+<meta content="r5NsL0L3HuovWhdiZOj/i+nRxkCLloVnt+CL37PWHqw=" name="csrf-token">
 
   <!--[if lt IE 8]>
-    <link href="/assets/font-awesome-ie7.min-cc74f6289091b05417f400b3abca2854.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="/assets/font-awesome-ie7.min-38a2336492f4a9dc8906919cf5e69780.css" media="all" rel="stylesheet" />
   <![endif]-->
 
    <!--[if lt IE 9]>
      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
    <![endif]-->
 
+  
+  
   
   
   <script type="text/javascript">
@@ -44,22 +46,22 @@
   <header>
     <div class="header_image">
     <a href="/">
-      <img alt="Tradervue" class="retina" data-retina="/assets/tvlogo1@2x-ffde449a818cceefb489e96539a250e6.png" src="/assets/tvlogo1-03574f7f2bb97efb33b2887507172f62.png" width="202">
+      <img alt="Tradervue" class="retina" data-retina="/assets/tvlogo1@2x-e48af6406a15f3d7f2bc3e57257f42be.png" src="/assets/tvlogo1-f4199ca8ef06dba00c0a725994fe38fc.png" width="202">
     </a>
   </div>
 
-	<nav>
-		<ul>
+  <nav>
+    <ul>
       <li><a href="http://www.tradervue.com/">Home</a></li>
-			<li><a href="http://www.tradervue.com/plans">Plans &amp; Pricing</a></li>
-			<li><a href="http://www.tradervue.com/shared">Shared</a></li>
-			<li><a href="http://blog.tradervue.com">Blog</a></li>
-			<li><a href="http://www.tradervue.com/help">Help</a></li>
-		</ul>
+        <li><a href="http://www.tradervue.com/plans">Plans &amp; Pricing</a></li>
+      <li><a href="http://www.tradervue.com/shared">Shared</a></li>
+      <li><a href="http://blog.tradervue.com">Blog</a></li>
+      <li><a href="http://www.tradervue.com/help">Help</a></li>
+    </ul>
   <div class="signed_in_as">
     <a href="https://www.tradervue.com/signin">Log In</a> or <a href="http://www.tradervue.com/plans">Sign up</a>
   </div>
-	</nav>
+  </nav>
 </header>
 <div id="under_header"></div>
 
@@ -109,17 +111,17 @@
   
   <footer>
   <p>© 2011-2013 Tradervue, all rights reserved.<br>
-    <a href="http://www.tradervue.com/about">About</a> | 
-    <a href="http://www.tradervue.com/termsofservice">Terms of Service</a> | 
-    <a href="http://www.tradervue.com/privacy">Privacy Policy</a> |
-    <a href="http://www.tradervue.com/help/affiliates">Affiliates</a> |
-    <a href="http://www.tradervue.com/help/contact">Contact Us</a><br>
-    Follow us: <a href="http://twitter.com/tradervueapp">Twitter</a> | 
-               <a href="http://stocktwits.com/tradervueapp">StockTwits</a> | 
-               <a href="https://www.facebook.com/Tradervue">Facebook</a> | 
-               <a href="https://plus.google.com/101571282833144034841/posts">Google+</a> | 
-               <a href="http://blog.tradervue.com">Blog</a>
-    </p>
+      <a href="http://www.tradervue.com/about">About</a> | 
+      <a href="http://www.tradervue.com/termsofservice">Terms of Service</a> | 
+      <a href="http://www.tradervue.com/privacy">Privacy Policy</a> |
+      <a href="http://www.tradervue.com/help/affiliates">Affiliates</a> |
+      <a href="http://www.tradervue.com/help/contact">Contact Us</a><br>
+      Follow us: <a href="http://twitter.com/tradervueapp">Twitter</a> | 
+                 <a href="http://stocktwits.com/tradervueapp">StockTwits</a> | 
+                 <a href="https://www.facebook.com/Tradervue">Facebook</a> | 
+                 <a href="https://plus.google.com/101571282833144034841/posts">Google+</a> | 
+                 <a href="http://blog.tradervue.com">Blog</a>
+  </p>
 </footer>
 
   
@@ -141,6 +143,17 @@ scJsHost +
 src="https://c.statcounter.com/7004523/0/1945057f/1/"
 alt="website statistics" ></div></noscript>
 <!-- End of StatCounter Code -->
+<script type="text/javascript">if (typeof NREUMQ !== "undefined") { if (!NREUMQ.f) { NREUMQ.f=function() {
+NREUMQ.push(["load",new Date().getTime()]);
+var e=document.createElement("script");
+e.type="text/javascript";
+e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
+  "js-agent.newrelic.com/nr-100.js";
+document.body.appendChild(e);
+if(NREUMQ.a)NREUMQ.a();
+};
+NREUMQ.a=window.onload;window.onload=NREUMQ.f;
+};
+NREUMQ.push(["nrfj","beacon-2.newrelic.com","8b4d37f31b","2598411","JVgPTUIMVA4HR0wVUAFSEhZAEVEUA1Ya",0,11,new Date().getTime(),"","","","",""]);}</script>
 
-
-</body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
