--- a/m/mi/mix/mixmatters.com.html
+++ b/m/mi/mix/mixmatters.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mixmatters.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624102548id_/http%3A//mixmatters.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mixmatters.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223083013id_/http%3A//mixmatters.com/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -88,7 +88,7 @@ Sign in
 </a>
 <ul class="dropdown-menu">
 <li>
-<form accept-charset="UTF-8" action="/users/sign_in" class="form-stacked" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="2A2jxh7kM1f624cqbQQdWqkkOzawDkp9ipsYQZO8I2U="></div>
+<form accept-charset="UTF-8" action="/users/sign_in" class="form-stacked" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="uPyQ11jnyhVzj2K5SdPWnZSLG9uAk6idKFmgymONkHQ="></div>
 <div class="clearfix">
 <label for="user_email">Email</label>
 <div class="input"><input class="span8" id="user_email" name="user[email]" size="30" type="email"></div>
@@ -103,8 +103,6 @@ Sign in
 </form>
 <div class="klear"></div>
 </li>
-<li class="divider"></li>
-<li><a href="/users/sign_up">Claim your account</a></li>
 </ul>
 </li>
 </ul>
@@ -146,48 +144,11 @@ Privacy Policy Statement
 
 </div>
 <div class="span1">&nbsp;</div>
-<div class="span16">
+<div class="sidebar span16">
 <div class="section">
-<div fb-xfbml-state="rendered" class="fb-like-box fb_iframe_widget" style="width:300px; height:260px" data-width="300" data-height="260" data-href="http://www.facebook.com/mixmatters" data-show-faces="true" data-stream="false" data-header="false"><span style="height: 260px; width: 300px;"><iframe src="http://www.facebook.com/plugins/likebox.php?api_key=220059004749002&amp;locale=en_US&amp;sdk=joey&amp;channel=http%3A%2F%2Fstatic.ak.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D19%23cb%3Df6c88509e5745a%26origin%3Dhttp%253A%252F%252Fmixmatters.com%252Ff33b1dc28162852%26domain%3Dmixmatters.com%26relation%3Dparent.parent&amp;height=260&amp;header=false&amp;show_faces=true&amp;stream=false&amp;width=300&amp;href=http%3A%2F%2Fwww.facebook.com%2Fmixmatters&amp;colorscheme=light&amp;show_border=true" class="fb_ltr" style="border: medium none; overflow: hidden; height: 260px; width: 300px;" name="f368883e3e4ee8e" id="f3f921c077f46a8" scrolling="no"></iframe></span></div>
-<br><br><a href="http://twitter.com/mixmatters"></a>
-
+&nbsp;<!-- Facebook --> <div fb-iframe-plugin="" query="app_id=220059004749002&amp;header=false&amp;height=260&amp;href=http%3A%2F%2Fwww.facebook.com%2Fmixmatters&amp;locale=en_US&amp;sdk=joey&amp;show_faces=true&amp;stream=false&amp;width=300" fb-xfbml-state="rendered" class="fb-like-box fb_iframe_widget" style="width:300px; height:260px" data-width="300" data-height="260" data-href="http://www.facebook.com/mixmatters" data-show-faces="true" data-stream="false" data-header="false"><span style="vertical-align: bottom; width: 300px; height: 260px;"><iframe class="" src="http://www.facebook.com/plugins/like_box.php?app_id=220059004749002&amp;channel=http%3A%2F%2Fstatic.ak.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D28%23cb%3Df2131c181cb1b12%26domain%3Dlocalhost%26origin%3Dhttp%253A%252F%252Flocalhost%253A3000%252Ff2ed61b3e9ea38a%26relation%3Dparent.parent&amp;header=false&amp;height=260&amp;href=http%3A%2F%2Fwww.facebook.com%2Fmixmatters&amp;locale=en_US&amp;sdk=joey&amp;show_faces=true&amp;stream=false&amp;width=300" style="border: medium none; visibility: visible; width: 300px; height: 260px;" title="fb:like_box Facebook Social Plugin" allowtransparency="true" name="f1ec0de159247a2" frameborder="0" height="260px" scrolling="no" width="300px"></iframe></span></div> <br><br>&nbsp; <script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://widget.uservoice.com/kp9qPuf4bXQUHLF3pXqLg.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=220059004749002"></script><script type="text/javascript"> e9 = new Object(); e9.size = "300x250,160x600,300x600"; </script> <script type="text/javascript" src="http://tags.expo9.exponential.com/tags/MixMatters/ROS/tags.js"></script> <br> <!-- CrowdIgnite --> <div id="_CI_widget_1"></div> <script type="text/javascript" src="http://widget.crowdignite.com/widgets/2699?_ci_wid=_CI_widget_1"></script> <br> <script type="text/javascript"> e9 = new Object(); e9.size = "160x600,120x600"; </script> <script type="text/javascript" src="http://tags.expo9.exponential.com/tags/MixMatters/ROS/tags.js"></script> <br> <!-- Outbrain --> <script> var OB_langJS = "http://widgets.outbrain.com/lang_en.js"; var OBITm = "1310986062632"; if ( typeof(OB_Script)!='undefined' )OutbrainStart(); else { var OB_Script = true; var str = unescape("%3Cscript src='http://widgets.outbrain.com/OutbrainRater.js' type='text/javascript'%3E%3C/script%3E"); document.write(str); } </script><script src="http://widgets.outbrain.com/OutbrainRater.js" type="text/javascript"></script> <br>
 </div>
-<div class="section">
-<div class="klear"></div>
-<br>
-<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://widget.uservoice.com/kp9qPuf4bXQUHLF3pXqLg.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=220059004749002"></script><script>
-  //<![CDATA[
-    var OB_langJS = 'http://widgets.outbrain.com/lang_en.js';
-    var OBITm = '1310986062632';
-    var OB_raterMode = 'stars';
-    var OB_recMode = 'dualBox';
-    
-    if ( typeof(OB_Script)!='undefined' )OutbrainStart(); else { var OB_Script = true; var str = unescape("%3Cscript src=\'http://widgets.outbrain.com/OutbrainRater.js\' type=\'text/javascript\'%3E%3C/script%3E"); document.write(str); }
-  //]]>
-</script><script src="http://widgets.outbrain.com/OutbrainRater.js" type="text/javascript"></script>
-
-
-</div>
-<div class="section">
-<script type="text/javascript">
-                  e9 = new Object();
-                  e9.size = "300x250";
-                </script>
-<script src="http://tags.expo9.exponential.com/tags/MixMatters/ROS/tags.js" type="text/javascript"></script>
-</div>
-<div class="section">
-<div id="_CI_widget_1"></div>
-<script async="async" src="http://widget.crowdignite.com/widgets/2699?_ci_wid=_CI_widget_1" type="text/javascript"></script>
-
-</div>
-<div class="section" style="text-align: center">
-<script type="text/javascript">
-                  e9 = new Object();
-                  e9.size = "160x600,120x600";
-                </script>
-<script src="http://tags.expo9.exponential.com/tags/MixMatters/ROS/tags.js" type="text/javascript"></script>
-</div>
-<div class="section">
+<div class="sidebar_bottom section">
 
 
 </div>
