--- a/f/fl/fli/flixtime.com.html
+++ b/f/fl/fli/flixtime.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flixtime.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620123931id_/http%3A//flixtime.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flixtime.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223105836id_/http%3A//www.flixtime.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:addthis="http://www.addthis.com/help/api-spec"><head>
     <meta name="google-site-verification" content="DKTzud6kuolXCO_WFu_34KQmnvljtRZFR1vNTspo6g8">	
@@ -353,7 +353,7 @@ var pageTracker = _gat._getTracker("UA-13045378-1");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
-    <script type="text/javascript" src="/static/js/awstats_misc_tracker.js"></script><img src="/static/js/awstats_misc_tracker.js?screen=800x600&amp;win=1366x768&amp;cdi=24&amp;java=false&amp;shk=n&amp;svg=y&amp;fla=n&amp;rp=n&amp;mov=n&amp;wma=n&amp;pdf=n&amp;uid=awsuser_id1582333651293r6270&amp;sid=awssession_id1582333651293r6270" height="0" width="0" border="0">
+    <script type="text/javascript" src="/static/js/awstats_misc_tracker.js"></script><img src="/static/js/awstats_misc_tracker.js?screen=800x600&amp;win=1366x768&amp;cdi=24&amp;java=false&amp;shk=n&amp;svg=y&amp;fla=n&amp;rp=n&amp;mov=n&amp;wma=n&amp;pdf=n&amp;uid=awsuser_id1582333651804r1208&amp;sid=awssession_id1582333651804r1208" height="0" width="0" border="0">
 
     
    
